// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Bottom Navigation Not Showing Labels 1`] = `
<div
  className="MuiBottomNavigation-root"
>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root Mui-selected NatDSBottomNavigationAction-selected-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-3 NatDSIcon-root-4"
      >
        outlined-navigation-home
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 Mui-selected NatDSBottomNavigationAction-selected-2"
      >
        Home
      </span>
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel NatDSIcon-root-3 NatDSIcon-root-5"
      >
        filled-action-cancel
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
      >
        Canceled orders
      </span>
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-check NatDSIcon-root-3 NatDSIcon-root-6"
      >
        filled-action-check
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
      >
        Confirmed orders
      </span>
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-media-play NatDSIcon-root-3 NatDSIcon-root-7"
      >
        filled-media-play
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
      >
        Training videos
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Bottom Navigation Playground 1`] = `
<div
  className="MuiBottomNavigation-root"
>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root Mui-selected NatDSBottomNavigationAction-selected-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-3 NatDSIcon-root-4"
      >
        outlined-navigation-home
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 Mui-selected NatDSBottomNavigationAction-selected-2"
      >
        Home
      </span>
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel NatDSIcon-root-3 NatDSIcon-root-5"
      >
        filled-action-cancel
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
      >
        Canceled orders
      </span>
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-check NatDSIcon-root-3 NatDSIcon-root-6"
      >
        filled-action-check
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
      >
        Confirmed orders
      </span>
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root MuiBottomNavigationAction-iconOnly"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-media-play NatDSIcon-root-3 NatDSIcon-root-7"
      >
        filled-media-play
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 MuiBottomNavigationAction-iconOnly"
      >
        Training videos
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Bottom Navigation Showing Labels 1`] = `
<div
  className="MuiBottomNavigation-root"
>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root Mui-selected NatDSBottomNavigationAction-selected-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-3 NatDSIcon-root-4"
      >
        outlined-navigation-home
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1 Mui-selected NatDSBottomNavigationAction-selected-2"
      >
        Home
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel NatDSIcon-root-3 NatDSIcon-root-5"
      >
        filled-action-cancel
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
      >
        Canceled orders
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-check NatDSIcon-root-3 NatDSIcon-root-6"
      >
        filled-action-check
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
      >
        Confirmed orders
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
  <button
    className="MuiButtonBase-root MuiBottomNavigationAction-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiBottomNavigationAction-wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-media-play NatDSIcon-root-3 NatDSIcon-root-7"
      >
        filled-media-play
      </i>
      <span
        className="MuiBottomNavigationAction-label NatDSBottomNavigationAction-label-1"
      >
        Training videos
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;
